converted from md

--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
-<h1> Whassup </h1>
+<h1>TIOBE Index for February 2024</h1>
+<h2>What is TIOBE Index</h2>
+<p>The TIOBE Programming Community index is an indicator of the popularity of programming 
+languages. The index is updated once a month. The ratings are based on the number of 
+skilled engineers world-wide, courses and third party vendors. Popular web sites
+Google, Amazon, Wikipedia, Bing and more than 20 other engines are used to calculate the ratings.
+It is important to note that the TIOBE index is not about the best programming language or the language
+in which most lines of code have been written.</p>
+<p>The index can be used to check whether your programming skills are still up to date or to make a 
+strategic decision about what programming language should be adopted when starting to build a new 
+software system. The definition of the TIOBE index can be found here.</p>
+<h2>Top 5 languages</h2>
+<ol>
+<li>
+<p><strong>Python</strong>  </p>
+<ul>
+<li>Rank: 1  </li>
+<li><img alt="lang" src="lang0.png" />  </li>
+<li>
+<p>Rating: 15.16%  </p>
+</li>
+<li>
+<p>Read more: <a href="lang0.html">Python</a>  </p>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>C</strong>  </p>
+<ul>
+<li>Rank: 2  </li>
+<li><img alt="lang" src="lang1.png" />  </li>
+<li>
+<p>Rating: 10.97%  </p>
+</li>
+<li>
+<p>Read more: <a href="lang1.html">C</a>  </p>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>C++</strong>  </p>
+<ul>
+<li>Rank: 3  </li>
+<li><img alt="lang" src="lang2.png" />  </li>
+<li>
+<p>Rating: 10.53%  </p>
+</li>
+<li>
+<p>Read more: <a href="lang2.html">C++</a>  </p>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Java</strong>  </p>
+<ul>
+<li>Rank: 4  </li>
+<li><img alt="lang" src="lang3.png" />  </li>
+<li>
+<p>Rating: 8.88%  </p>
+</li>
+<li>
+<p>Read more: <a href="lang3.html">Java</a>  </p>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>C#</strong>  </p>
+<ul>
+<li>Rank: 5  </li>
+<li><img alt="lang" src="lang4.png" />  </li>
+<li>
+<p>Rating: 7.53%  </p>
+</li>
+<li>
+<p>Read more: <a href="lang4.html">C#</a>  </p>
+</li>
+</ul>
+</li>
+</ol>
